--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Site of Jonathan Meyers
+title: The Blog of Jonathan Meyers
 ---
 <div class="card-columns">
     {% for post in site.posts %}
