--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@ title: The Site of Jonathan Meyers
 <div class="card-columns">
     {% for post in site.posts %}
     <div class="card bg-light">
+        {% if post.link == "" %}
 		<a href="{{site.baseurl}}{{post.url}}">
 			<img class="card-img-top img-fluid" src="{{ site.baseurl }}{{ post.image }}" class="image">
 		</a>
+        {% else %}
+		<a href="{{post.link}}">
+			<img class="card-img-top img-fluid" src="{{ site.baseurl }}{{ post.image }}" class="image">
+		</a>
+        {% endif %}
         <div class="card-block">
             <h4 class="card-title text-xs-center"><a href="{{site.baseurl}}{{post.url}}">{{ post.title }}</a></h4>
             <p class="card-text text-xs-center">{{ post.date | date: "%B %-d, %Y" }}</p>
